--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,13 @@
         <meta name="theme-color" content="#000000" />
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Pacifico&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="app.css">
         <title>dolce_Bakers</title>
     </head>
     <body>
         <div id="root"></div>
-
     </body>
 </html>
